--- a/q/252593.html
+++ b/q/252593.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>029</td><td>Uiua</td><td>240808T201454Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/274819#274819">nyxbird</a></td></tr>
+<tr d-ix="0"><td>027</td><td>Uiua</td><td>240808T201454Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/274819#274819">nyxbird</a></td></tr>
 <tr d-ix="1"><td>061</td><td>JavaScript Node.js</td><td>240808T005734Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/274776#274776">Andrew B</a></td></tr>
 <tr d-ix="2"><td>095</td><td>Befunge93</td><td>240422T085610Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/272719#272719">Adelie</a></td></tr>
 <tr d-ix="3"><td>nan</td><td>Tcl</td><td>230410T120317Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/259930#259930">138 Aspe</a></td></tr>
@@ -64,18 +64,21 @@
 <tr d-ix="35"><td>039</td><td>Factor + math.text.english</td><td>221005T024112Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/252595#252595">chunes</a></td></tr>
 <tr d-ix="36"><td>007</td><td>Vyxal</td><td>221005T022330Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/252594#252594">naffetS</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 29 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, <strike>29</strike> 27 bytes</h1>
+<pre><code>$&quot;zo_te__o&quot;.:▽10.&quot;ttffssen&quot;
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-rc_1__InpvdHRmZnNzZW50ZXR0ZmZzc2VudHR0dHR0dHR0dHR0dHR0dHR0dHRmZmZmZmZmZmZmZmZmZmZmZmZmZnNzc3Nzc3Nzc3Nzc3Nzc3Nzc3NzZWVlZWVlZWVlZW5ubm5ubm5ubm5vIgoKJCJ6b190ZV9fbyIuOuKWvTEwLiJ0dGZmc3NlbiIKCuKJjS4K" rel="nofollow noreferrer">Try it!</a></p>
+<pre><code>$&quot;zo_te__o&quot;.:▽10.&quot;ttffssen&quot;
+                 &quot;ttffssen&quot; # push &quot;...&quot;
+             ▽10            # deciplicate each character
+            :   .           #   while keeping the original on top
+           .                # duplicate
+$&quot;zo_te__o&quot;                 # insert into a formatted string
+</code></pre>
+<p>29 byte version:</p>
 <pre><code>⍥⊂5&quot;zo&quot;,&quot;te&quot;:▽10.&quot;ttffssen&quot;@o
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-rc_1__InpvdHRmZnNzZW50ZXR0ZmZzc2VudHR0dHR0dHR0dHR0dHR0dHR0dHRmZmZmZmZmZmZmZmZmZmZmZmZmZnNzc3Nzc3Nzc3Nzc3Nzc3Nzc3NzZWVlZWVlZWVlZW5ubm5ubm5ubm5vIgoK4o2l4oqCNSJ6byIsInRlIjrilr0xMC4idHRmZnNzZW4iQG8KCuKJjS4gIyBjaGVjayBpZiB0aGV5J3JlIGVxdWFsCg==" rel="nofollow noreferrer">Try it!</a></p>
-<pre><code>⍥⊂5&quot;zo&quot;,&quot;te&quot;:▽10.&quot;ttffssen&quot;@o
-                            @o # push &quot;o&quot;
-                  &quot;ttffssen&quot;   # push &quot;ttffssen&quot;
-              ▽10              # deciplicate each character
-             :   .             #   while keeping the original on top
-    &quot;zo&quot;,&quot;te&quot;                  # push &quot;te&quot;, grab &quot;ttffssen&quot;, push &quot;zo&quot;
-⍥⊂5                           # join all six strings on the stack
-</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 63 </s> 61 bytes</h1>
 
