--- a/q/274775.html
+++ b/q/274775.html
@@ -60,18 +60,20 @@ print($x)
 <p><a href="https://tio.run/##K8gvTy0qzkjNyfn/Py0zpyS1SKGgKDOvpFrdyEQhI7@0qFi9lkslJbFSwVZByTc/D8hS4lKpAPJAgno5qXnpJRlcYC0aKhWa//8DAA" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
 <p>This requires a modification to the original code by adding $ in front of the variables; functionally, I don't see any difference to the allowed adding of semicolons at the line ends, or replacing the &quot;=&quot; assignment operator with a different one.</p>
 <p>Straightforward: 'filter' is basically the same as 'function' (but with automatic pipeline processing, which is not the point here), but has only 6 instead of 8 characters. It will ignore any arguments and just return the static string '24 hours'.</p>
-<h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, <s>167</s> <s>165</s> 185 bytes</h1>
-<p><em>Found two spaces that could be removed</em><br />
-<em>print now generates the output</em></p>
+<h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, <s>167</s> <s>165</s> <s>185</s> 171 bytes</h1>
+<p><em>165 Found two spaces that could be removed</em><br />
+<em>185 print now generates the output</em><br />
+<em>171 thanks to @julian who golfed the C#</em></p>
+<h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 171 bytes</h1>
 
-<pre class="lang-powershell prettyprint-override"><code>Add-Type 'using System;public class c{static void print(int x){Console.Write(&quot;24 hours&quot;);}public static void d(){string day;int x;
+<pre class="lang-powershell prettyprint-override"><code>Add-Type 'public class c{static void print(int x){System.Console.Write(&quot;24 hours&quot;);}public static void d(){int x;var
 day = &quot;Monday&quot;;
 x = day.Length;
 print(x);
 }}'
 [c]::d()
 </code></pre>
-<p><a href="https://tio.run/##TY09C8IwFEX3/IpHlzaDHcSpwUFcdVJwEIeaBBuISchLtaX0t8fnx@Bw4dzhnhv8U0fstLU5b5RaHMegoezRuBscRkz6LkJ/tUaCtC0iyAlTm6g@vFEQonGposDAp6136K2uT9EkXRXLFXS@j1hwMf8U/1NVcVLF949qR/FxCEYIayj23hEVgg3UiOqddrfUCfY9HLhg81yys7w0DYlyfgE" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##TY2xDsIgFEV3vuKFpWWwg3EqcTCuOmniYBwQXiwJAgFa2zT9diTq4HCTc4d7rncvDLFDY3LeKbU6Tx6h8v3daAnSiBhBzjGJVOrgtAIftE11CYxsPk0x4bPZOxudweYSdMKarjfQuT5EyvjyM/0bVM3mz54PIhAlJtgCPTpbiHIyllaoOaB9pI6T79/IOFmWilzlrW2LIOc3" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
 <p>This takes the original code as C# and compiles it into a class <code>c</code> that can be used by PowerShell. Some further golfing of the C# might be possible ...</p>
 </div>
 <div id="pu1" class="pu"><h1>Rust, 145 bytes</h1>
