--- a/q/273196.html
+++ b/q/273196.html
@@ -26,23 +26,38 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>Vyxal 3</td><td>240811T082002Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/274896#274896">bb94</a></td></tr>
-<tr d-ix="1"><td>092</td><td>Setanta</td><td>240811T071947Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/274894#274894">bb94</a></td></tr>
+<tr d-ix="0"><td>086</td><td>Setanta</td><td>240811T071947Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/274894#274894">bb94</a></td></tr>
+<tr d-ix="1"><td>009</td><td>Vyxal 3</td><td>240811T082002Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/274896#274896">bb94</a></td></tr>
 <tr d-ix="2"><td>065</td><td>Raku Perl 6 rakudo</td><td>240811T080020Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/274895#274895">bb94</a></td></tr>
 <tr d-ix="3"><td>018</td><td>05AB1E</td><td>240521T090045Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273213#273213">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>041</td><td>JavaScript Node.js</td><td>240521T005502Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273209#273209">l4m2</a></td></tr>
 <tr d-ix="5"><td>031</td><td>Charcoal</td><td>240520T235644Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273208#273208">Neil</a></td></tr>
 <tr d-ix="6"><td>007</td><td>Jelly</td><td>240520T191228Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273198#273198">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, <s>13</s> <s>12</s> 9 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>93</s> <s>92</s> 86 bytes</h1>
+<pre><code>gniomh(x){t:=0f:=0nuair-a x{t=f-t x-=1le i idir(-1,x%10){t+=f+1f+=f+1}x//=10}toradh t}
+</code></pre>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICwrKuSCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
+<h2>Explanation</h2>
+<pre><code>gniomh(x){t:=0f:=0nuair-a x{t=f-t x-=1le i idir(-1,x%10){t+=f+1f+=f+1}x//=10}toradh t}­⁡​‎‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁤⁡⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁡⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁣⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁢⁪‏⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁣⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁢⁪‏⁠⁪⁪‏​⁡⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁤⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁤⁣⁪‏‏​⁡⁠⁡‌⁢⁤​‎‎⁪⁡⁪⁠⁪⁤⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁡⁪‏‏​⁡⁠⁡‌⁣⁡​‎‎⁪⁡⁪⁠⁪⁢⁡⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁣⁤⁪‏‏​⁡⁠⁡‌⁣⁢​‎‎⁪⁡⁪⁠⁪⁢⁡⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁢⁡⁪‏‏​⁡⁠⁡‌­
+          t:=0                                                                          &gt;-- ‎⁡Cumulative result
+              f:=0                                                                      &gt;-- ‎⁢Inversion mask (0b1...1)
+                  nuair-a x{                                                }           &gt;-- ‎⁣Iterate for each digit of the bijective representation: while x &gt; 0...
+                            t=f-t                                                       &gt;-- ‎⁤Bit-flip the cumulative result with the inversion mask
+                                  x-=1                                                  &gt;-- ‎⁢⁡Subtract x by 1
+                                      le i idir(-1,x%10){            }                  &gt;-- ‎⁢⁢Do the following x % 10 + 1 times:
+                                                         t+=f+1                         &gt;-- ‎⁢⁣Set the next bit of the result
+                                                               f+=f+1                   &gt;-- ‎⁢⁤Set the next bit of the inversion mask
+                                                                      x//=10            &gt;-- ‎⁣⁡Divide x by 10
+                                                                             toradh t   &gt;-- ‎⁣⁢Return the result
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, <s>13</s> <s>12</s> 9 bytes</h1>
 <pre><code>₀ḋ:κḃ$YfB
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCLhuYLGm+KMiiIsIuKCgOG4izrOuuG4gyRZZkIiLCJ9IiwiMCAxIDIgOSAxMCAxMSAxOSAyMCA5OSAxMDAgMTEwIDExMSAxMjMgNDU2NyIsIjMuNC4yIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>93</s> 92 bytes</h1>
-<pre><code>gniomh(x){m:=1t:=0f:=0nuair-a x{t=f-t x-=1le i idir(-1,x%10){t+=m f+=m m*=2}x//=10}toradh t}
-</code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDwpbybCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 65 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>{:2(.&amp;(my&amp;g={$_??g(+^-$_ div 10)~($!+^=1)x+^-$_%10+1!!~($!=0)}))}
