--- a/q/274938.html
+++ b/q/274938.html
@@ -40,7 +40,7 @@
 <pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*(x*n/w*w*y+(w*~-y+~-x)/2n+x*n%w)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LYtBCsIwEABfI2w2G2MVQbHxM9pIoOyCVja59CO9BNFH-RsL9jJzGGZ6s1y7-orh8xyiO3w9MGUqpCacMxaEjOwVFYsFxdEVO7ps_JbtHFZqls1FuUMKGz6ltmlmWmsuwg_pu3UvN4iQaMe0ZzqyWaZa__4B" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Takes input as BigInts. I think this uses roughly the same method as emanresu A's JS solution, but I found it independently.</p>
+<p>Takes input as BigInts. I think this uses a bit of a different method from emanresu A's solution, but I haven't quite figured out how hers works yet.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 85 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x,y,w,`[`=matrix,s=colSums)repeat print(s(s(((y*w*F):(y*w*(F&lt;-F+1)-1))[x])[y,b=T]))
