--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240814T044825Z
+"   /golfscore                                      20240814T083430Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274951.html">Sum-of-four-squares grid                        : 0274951</a>
 <a href="q/103403.html">Print the f  f times table                      : 0103403</a>
 <a href="q/274938.html">Sums of X*Y chunks of the nonnegative integers  : 0274938</a>
 <a href="q/198427.html">Shift right by half a bit                       : 0198427</a>
